--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">Lab2</string>
     <string name="action_settings">Settings</string>
+    <string name="text_go_to_settings">Go to settings</string>
+    <string name="text_button_settings">Settings</string>
+    <string name="text_button_confirm_settings">Confirm settings</string>
+    <string name="text_edit_url">Enter RSS feed URL</string>
+    <string name="preference_file_key">com.example.herma.lab2.preferences</string>
+    <string name="text_preference_url_key">FeedURL</string>
+    <string name="text_hint_num_displayed">Number of items to display</string>
+    <string name="text_preference_num_key">Displayed</string>
+    <string name="text_preference_interval">IntervalChoice</string>
+    <string name="text_update_10_minutes">10 minutes</string>
+    <string name="text_update_1_hour">1 hour</string>
+    <string name="text_update_24_hours">24 hours</string>
+    <string name="text_select_update_interval">Select update interval:</string>
 </resources>
